Bug 1284553 - Use a fuzzy-compare for the presShell resolution so that negligible differences don't block all repaint requests. r=botond, a=gchang

MozReview-Commit-ID: LtxP7HGGRXn